--- a/passwordgenerator/styles.css
+++ b/passwordgenerator/styles.css
@@ -279,27 +279,16 @@ input[type="range"]::-ms-track {
 }
 
 footer {
-
-    font-weight: 600;
+  font-weight: 600;
+  font-size: large;
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  color: #ADD8E6;
   
-    font-size: large;
-  
-    display: flex;
-  
-    flex-direction: column;
-  
-    align-items: center;
-  
-    justify-content: center;
-  
-   
-  
-    bottom: 0;
-  
-    color: #ADD8E6;
-  
-   
-  
-  }
+}
 
 
