--- a/chicks/chicks.css
+++ b/chicks/chicks.css
@@ -47,7 +47,7 @@
     height: 50%;
     border-radius: 100px/50px;
     background-color: #ffffb3;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .wing {
@@ -78,45 +78,3 @@
     border-radius: 0 0 20px 20px;
     background-color: #f5f3e0;
 }
-
-
-nav {
-    background-color: #ddd;
-    padding: 10px;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    color: chocolate;
-}
-
-nav li {
-    display: inline-block;
-    margin: 0 10px;
-}
-
-nav a {
-    text-decoration: none;
-    color: black;
-}
-
-footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
-}
-.slider-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .slider-image {
-    width: 50%;
-    object-fit: cover;
-    margin-right: 50px;
-  }
